--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
+    "apisauce": "^2.1.5",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-paper": "^4.11.2",
