--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,9 +14,13 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "apisauce": "^2.1.5",
+    "lottie-react-native": "^5.1.2",
+    "qs": "^6.10.3",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-form-validator": "^0.5.1",
     "react-native-paper": "^4.11.2",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
