--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "apisauce": "^2.1.5",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.2",
     "qs": "^6.10.3",
     "react": "17.0.2",
@@ -23,6 +24,8 @@
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-select-dropdown": "^1.13.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.1.0"
