--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,16 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.5",
+    "@react-native-community/netinfo": "^8.3.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "apisauce": "^2.1.5",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.2",
+    "moment": "^2.29.3",
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-form-validator": "^0.5.1",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-paper": "^4.11.2",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.4",
