--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-native-community/netinfo": "^8.3.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "apisauce": "^2.1.5",
@@ -23,8 +24,10 @@
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-form-validator": "^0.5.1",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-pager-view": "^5.4.24",
     "react-native-paper": "^4.11.2",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.4",
@@ -33,6 +36,7 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
