--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -1,8 +1,8 @@
 # Project-wide Gradle settings.
-MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=cung6ama
-MYAPP_UPLOAD_KEY_PASSWORD=cung6ama
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=Cung6am@
+MYAPP_RELEASE_KEY_PASSWORD=Cung6am@
 
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
